2004-01-15  Michael Meeks  <michael@ximian.com>

	* Version 2.5.2

2004-01-15  Jason Leach  <leach@wam.umd.edu>

	* configure.in: require gtk2 >= 2.3.1

2004-01-14  Albert Chin-A-Young  <china@thewrittenword.com>

	* bonobo/bonobo-dock-item.h, bonobo/bonobo-dock-band.h,
	bonobo/bonobo-dock.h: fix (signed) enum bitfields

	* bonobo/bonobo-canvas-item.c: fix trailing comma in enum.

	* bonobo/bonobo-ui-util.c (read_four_bytes): bin bogus const.

2004-01-12  Sergey V. Udaltsov  <sergey.oudaltsov@clients.ie>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_xml_set_image):
	handle image loading with a defined size for svg artwork.

2004-01-07  Alexander Larsson  <alexl@redhat.com>

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_build): 
	Handle the pack-start behaviour attribute

2004-01-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c
	(has_item_to_the_right): add to deal with pack-end fun.
	(impl_bonobo_ui_sync_status_state): upd. logic.

2003-12-30  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Ahem,
	flip my reversed condition.

2003-12-29  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Fixed
	the emission logic; actually test against the old activation
	state.  Also, call bonobo_control_activate_notify() to notify the
	control frame.

2003-12-15  JP Rosevear <jpr@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c (toolbar_build_widget): do a
	memmove instead of a strcpy because the strings overlap

2003-12-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c
	(size_allocate_helper): fix bug where item + <small item>
	where small item was < sizeof expander popup would cause
	the last 2 items to always hit the expander. Cleaned up
	logic, simplified a tad. X#49949

2003-12-08  Michael Meeks  <michael@ximian.com>

	* Version 2.5.1

	* bonobo/bonobo-control.c (bonobo_control_do_popup_full),